cluster/policies/allow-to-internet.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-internet
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.13.0.0/16
        - 192.168.0.0/16
        - 172.16.0.0/12
