cluster/policies/allow-to-kube-control.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-kube-control
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - to:
      - ipBlock:
          cidr: 172.24.0.1/32
    ports:
    - protocol: TCP
      port: 443
